fix beam search and other bugs, add tokenizers